<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.view.GameDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/GameNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00BCD4"
                android:fontFamily="@font/black_ops_one"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:flow_verticalAlign="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/GameimageDetail"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/todo"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GameNameDetail"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/data_sheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#00BCD4"
                android:fontFamily="@font/black_ops_one"
                android:text="@string/game_data_sheet"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:flow_horizontalAlign="start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/GameimageDetail"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <LinearLayout
                android:id="@+id/panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/shareBtnLottie"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:clickable="true"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_speed="0.5"
                    tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/favoritesLottie"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:clickable="true"
                    app:lottie_autoPlay="false"
                    app:lottie_loop="false"
                    app:lottie_speed="1"
                    tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:elevation="20dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="16dp"
                        android:background="?android:attr/listDivider"
                        app:layout_constraintBottom_toTopOf="@+id/cardView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/GameimageDetail" />

                    <TextView
                        android:id="@+id/txt01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/game_description" />

                    <TextView
                        android:id="@+id/GameDescriptionDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/maven_pro_medium"
                        android:textColor="#00BCD4"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck,TextContrastCheck"
                        tools:text="Esto es una descripcion del juego" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/txt02"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/game_genre" />

                    <TextView
                        android:id="@+id/GameGenreDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/maven_pro_medium"
                        android:textColor="#00BCD4"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck"
                        tools:text="esto es el genero del juego" />

                    <View
                        android:id="@+id/divider5"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/txt03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/game_publisher" />

                    <TextView
                        android:id="@+id/GamePublisherDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/maven_pro_medium"
                        android:textColor="#00BCD4"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck"
                        tools:text="esto es el publisher del juego" />

                    <View
                        android:id="@+id/divider6"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/txt04"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/game_developer" />

                    <TextView
                        android:id="@+id/GameDeveloperDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/maven_pro_medium"
                        android:textColor="#00BCD4"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck"
                        tools:text="esto es el developer del juego" />

                    <View
                        android:id="@+id/divider7"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/txt05"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/date_of_release" />

                    <TextView
                        android:id="@+id/GameDateDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:fontFamily="@font/maven_pro_medium"
                        android:textColor="#00BCD4"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck"
                        tools:text="esto es la fecha del juego" />

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/txt06"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/game_url" />

                    <TextView
                        android:id="@+id/GameUrlDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:autoLink="web"
                        android:fontFamily="@font/maven_pro_medium"
                        android:linksClickable="true"
                        android:textColor="#00BCD4"
                        android:textColorLink="@color/teal_200"
                        android:textSize="20sp"
                        tools:text="esto es la url del juego" />

                    <View
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <TextView
                        android:id="@+id/txt07"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/more_game_information" />

                    <TextView
                        android:id="@+id/GameMoreDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="10dp"
                        android:autoLink="web"
                        android:fontFamily="@font/maven_pro_medium"
                        android:linksClickable="true"
                        android:textColor="#00BCD4"
                        android:textColorLink="@color/teal_200"
                        android:textSize="20sp"
                        tools:text="esto es mas info del juego" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>